proxy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: port-proxy
spec:
  hostname: port-proxy
  containers:
  - name: http-proxy-tcp
    image: k8s.gcr.io/proxy-to-service:v2
    args: [ "tcp", "80", "nginx" ]
    ports:
    - name: http
      protocol: TCP
      containerPort: 80
      hostPort: 80
  - name: https-proxy-tcp
    image: k8s.gcr.io/proxy-to-service:v2
    args: [ "tcp", "443", "nginx" ]
    ports:
    - name: https
      protocol: TCP
      containerPort: 443
      hostPort: 443
