test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-web
spec:
  selector:
    app: test
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  externalIPs:
    - 192.168.0.45
