deployment_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: deployment
spec:
  rules:
  - host: felix.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
